--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
-
+#
 # Temporary files
 *.000
 *.bak
@@ -27,3 +27,6 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+#Spécifique au projet : 
+CarteRaspberry.step
